--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,11 +48,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+  add_message_files(
+    FILES
+    gripper_state.msg
+  )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -69,10 +68,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   sensor_msgs#   std_msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   sensor_msgs
+   std_msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -106,7 +106,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ik_publisher
-#  CATKIN_DEPENDS roscpp rospy sensor_msgs std_msgs
+   CATKIN_DEPENDS message_runtime roscpp rospy sensor_msgs std_msgs
 #  DEPENDS system_lib
 )
 
